crates/solaris-providers/src/snapshots/solaris_providers__bedrock__tests__bedrock_basic.snap
---
source: crates/solaris-providers/src/bedrock_test.rs
assertion_line: 73
expression: "p.build_request_body(&r).expect(\"request body projection should succeed\")"
---
{
  "anthropic_version": "bedrock-2023-05-31",
  "max_tokens": 8192,
  "messages": [
    {
      "content": [
        {
          "text": "Hello",
          "type": "text"
        }
      ],
      "role": "user"
    }
  ],
  "system": "You are a test assistant."
}
