crates/solaris-providers/src/snapshots/solaris_providers__bedrock__tests__bedrock_with_tools.snap
---
source: crates/solaris-providers/src/bedrock_test.rs
assertion_line: 90
expression: "p.build_request_body(&r).expect(\"request body projection should succeed\")"
---
{
  "anthropic_version": "bedrock-2023-05-31",
  "max_tokens": 8192,
  "messages": [
    {
      "content": [
        {
          "text": "go",
          "type": "text"
        }
      ],
      "role": "user"
    }
  ],
  "system": "You are a test assistant.",
  "tools": [
    {
      "description": "Read",
      "input_schema": {
        "$schema": "https://json-schema.org/draft/2020-12/schema",
        "properties": {
          "path": {
            "type": "string"
          }
        },
        "type": "object"
      },
      "name": "read"
    }
  ]
}
